<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:focusable="true"
    android:background="@color/layoutbg"
    android:focusableInTouchMode="true"
    tools:context="csvparser.testforbeata.com.csvparserdemoapp.Activities.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:id="@+id/ll_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_file"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textSize="16sp"

                    />
                <Button
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_bordered"
                    android:textColor="@android:color/white"
                    android:text="@string/browse"
                    android:id="@+id/btnBrowse"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ll_top"
                android:layout_marginTop="70dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/tv_datassize"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/tv_avai_vars"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_message"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginTop="20dp"
                    android:id="@+id/et_message"
                    android:text=""
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interval"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_weight=".4"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/radio_group"
                        android:layout_marginTop="10dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:checked="true"
                            android:id="@+id/by_timer"
                            android:textColor="@android:color/black"
                            android:buttonTint="@color/colorAccent"
                            android:textStyle="bold"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reandom"
                            android:textStyle="bold"
                            android:id="@+id/by_rand"
                            android:textColor="@android:color/black"
                            android:buttonTint="@color/colorAccent"

                            android:layout_marginTop="10dp"/>
                    </RadioGroup>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:backgroundTint="@color/colorAccent"
                            android:inputType="number"
                            android:id="@+id/et_time"
                            android:hint="@string/enter_time"
                            android:textColorHint="@android:color/white"
                            />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <EditText
                                android:layout_width="70dp"
                                android:layout_height="40dp"
                                android:backgroundTint="@color/colorAccent"
                                android:inputType="number"
                                android:hint="@string/from_hint"
                                android:textColorHint="@android:color/white"
                                android:id="@+id/et_rand_start"

                                />
                            <EditText
                                android:layout_width="70dp"
                                android:layout_height="40dp"
                                android:backgroundTint="@color/colorAccent"
                                android:layout_alignParentRight="true"
                                android:inputType="number"
                                android:hint="@string/to_hint"
                                android:textColorHint="@android:color/white"
                                android:id="@+id/et_rand_end"

                                />
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="120dp"
                        android:layout_height="70dp"
                        android:text="@string/send"
                        android:background="@drawable/button_bordered"
                        android:textColor="@android:color/white"
                        android:id="@+id/btnSend"
                        />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
